--- a/MyWebsite/header.html
+++ b/MyWebsite/header.html
@@ -16,7 +16,7 @@
 			<li><a href="Form.php">Form PHP</a></li>
 			<li><a href="MangChuoiHam.php">Xử lý Mảng-Chuỗi-Hàm</a></li>
 			<li><a href="OOP.php">Hướng đối tượng</a></li>
-			<li><a href="#">MySQL</a></li>
+			<li><a href="MySQL.php">MySQL</a></li>
 		</ul>
 	</div>
 	<div id="content">
